2005-07-17  Johan Dahlin  <johan@gnome.org>

	* gobject/pygobject.h: 
	* gobject/gobjectmodule.c (pyg_gil_state_ensure_py23) 
	(pyg_gil_state_release_py23): Remove pre python 2.3.5 compatibility.
	Simplifies thread handling.
	
	* configure.in: Require glib/gtk+ 2.7.3

	* gtk/gtk.defs (get_model, set_do_overwrite_confirmation) 
	(get_do_overwrite_confirmation, queue_resize, get_visible_range): Add

	* gtk/gtk-types.defs (FileChooserError): Add.

2005-07-15  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (create_property):
	Allow enums to be specified in the constructor
	* gobject/pygparamspec.c: (pyg_param_spec_getattr):
	Return flags or enum object for pspec.default_value
	* tests/test_enum.py: Remove usage of assert statement,
	add default_value test, both for flags and enum

2005-07-10  Johan Dahlin  <johan@gnome.org>

	* configure.in: Post release version bump

=== PyGTK 2.7.0 ===
2005-07-10  Johan Dahlin  <johan@gnome.org>

	* configure.in: Bump glib/gtk+ requirements

	* NEWS: Updated

	* README: Updated

2005-07-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygiochannel.c (py_io_channel_win32_poll)
	(py_io_channel_win32_make_pollfd): Change to use the new PyGPollFD
	type instead of tuples.

	* gobject/pygsource.c (pyg_poll_fd_dealloc): Change DECREF to
	XDECREF on self->fd_obj.  Moved PyGPollFD structure into
	pygobject-private.h, to make it accessible from pygiochannel.c.

2005-07-10  Johan Dahlin  <johan@gnome.org>

	* gtk/gtkwidget.override (_wrap_gtk_widget_set_set_scroll_adjustments_signal) 
	(_wrap_gtk_widget_set_set_scroll_adjustments_signal): Impl.
	Patch by Gustavo, fixes #155679

	* tests/test_signal.py (TestOldStyleOverride): 
	Add unittests. Lazy Gustavo.
	
	* gtk/gtkwidget.override (_wrap_gtk_widget_list_accel_closures): 
	Remove until we decide what we should return.

	* gobject/pygobject.c: (PyGProps_setattro),
	(pygobject_set_property):
	* tests/test_properties.py: