@@ -332,9 +332,7 @@ _wrap_gtk_widget__set_window(PyGObject *self, PyGObject *value, void *closure)
 	return -1;
     }
     
-    pyg_begin_allow_threads;
     GTK_WIDGET(self->obj)->window = g_object_ref(GDK_WINDOW(value->obj));
-    pyg_end_allow_threads;
 
     return 0;
 }
